--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -15,13 +15,21 @@
     <description><![CDATA[
     A code tool, Providers Code snippet auto completion and sample code creation <br>
     <br>
-    1. code completion: Automatically prompt frequently-used code snippets, such as RSA encryption and decryption, HTTP request, etc  <br>
+    1. code completion: Automatically prompt frequently-used code snippets, such as RSA encryption and decryption, HTTP request, etc.  <br>
     2. Create sample codes: The context menu on project view provides an action group to create new sample code, such as design pattern example code  <br>
     <br>
     The code snippet and sample code are from the server, It can add new sample codes at any time <br>
     <br>
-    support Java, Kotlin, JavaScript, Go
+    Support Java, Kotlin, JavaScript, Go
+    <br>
   ]]></description>
+
+    <change-notes><![CDATA[
+
+    <h3>0.1.1</h3>
+    <p>code completion optimize</p>
+   ]]></change-notes>
+
     <idea-version since-build="191"></idea-version>
 
     <!-- Product and plugin compatibility requirements.
