--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -25,6 +25,10 @@
   ]]></description>
 
     <change-notes><![CDATA[
+    <h3>0.2</h3>
+    <p>fix: webstorm error</p>
+    <p>The sample code menu hides unsupported languages</p>
+    <p>Go and Kotlin automatically generate package name</p>
 
     <h3>0.1.1</h3>
     <p>code completion optimize</p>
