--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,25 +13,29 @@
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description><![CDATA[
+    提供“代码片段自动提示”和“创建示例代码”的功能 <br>
     A code tool, Providers Code snippet auto completion and sample code creation <br>
     <br>
-    1. code completion: Automatically prompt frequently-used code snippets, such as RSA encryption and decryption, HTTP request, etc.  <br>
+    1. Code completion: Automatically prompt frequently-used code snippets, such as RSA encryption and decryption, HTTP request, etc.  <br>
     2. Create sample codes: The context menu on project view provides an action group to create new sample code, such as design pattern example code  <br>
     <br>
     The code snippet and sample code are from the server, It can add new sample codes at any time <br>
     <br>
-    Support Java, Kotlin, JavaScript, Go
+    Support Java, JavaScript, Kotlin, Go
     <br>
   ]]></description>
 
     <change-notes><![CDATA[
+    <h3>0.2.1</h3>
+    <p>Code Completion optimization that contains points</p>
+
     <h3>0.2</h3>
     <p>fix: webstorm error</p>
     <p>The sample code menu hides unsupported languages</p>
     <p>Go and Kotlin automatically generate package name</p>
 
     <h3>0.1.1</h3>
-    <p>code completion optimize</p>
+    <p>Code completion optimization</p>
    ]]></change-notes>
 
     <idea-version since-build="191"></idea-version>
@@ -81,19 +85,4 @@
             <add-to-group group-id="ProjectViewPopupMenu" anchor="after" relative-to-action="WeighingNewGroup"></add-to-group>
         </group>
     </actions>
-
-<!--    <extensions defaultExtensionNs="com.goide">-->
-<!--        <completion.contributor-->
-<!--                implementationClass="com.yuanzhy.dogcoder.ide.intellij.completion.go.GoCompletionContributor"-->
-<!--                language="go" order="first"/>-->
-<!--        <completion.contributor-->
-<!--                implementationClass="com.yuanzhy.dogcoder.ide.intellij.completion.yaml.YamlCompletionContributor"-->
-<!--                language="yaml" order="first"/>-->
-<!--    </extensions>-->
-
-<!--    <extensions defaultExtensionNs="Pythonid">-->
-<!--        <completion.contributor-->
-<!--                implementationClass="com.yuanzhy.dogcoder.ide.intellij.completion.python.PythonCompletionContributor"-->
-<!--                language="Python" order="first"/>-->
-<!--    </extensions>-->
 </idea-plugin>
