--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -13,7 +13,6 @@
          Simple HTML elements (text formatting, paragraphs, and lists) can be added inside of <![CDATA[ ]]> tag.
          Guidelines: https://plugins.jetbrains.com/docs/marketplace/plugin-overview-page.html#plugin-description -->
     <description><![CDATA[
-    提供“代码片段自动提示”和“创建示例代码”的功能 <br>
     A code tool, Providers Code snippet auto completion and sample code creation <br>
     <br>
     1. Code completion: Automatically prompt frequently-used code snippets, such as RSA encryption and decryption, HTTP request, etc.  <br>
@@ -22,6 +21,8 @@
     The code snippet and sample code are from the server, It can add new sample codes at any time <br>
     <br>
     Support Java, JavaScript, Kotlin, Go
+    <br>
+    提供“代码片段自动提示”和“创建示例代码”的功能
     <br>
   ]]></description>
 
